perf: Parse性能优化 — ParseTree +201%, 全面超越wast (#53)
* perf: ParseTree field name cache + SWAR string scan

- Add NameCache: static hash-indexed field name cache (inspired by
  fastjson2's JSONFactory.NAME_CACHE). Repeated field names across
  parses share the same String instance, eliminating allocation.

- Add SWAR string scanning in UTF8 parser as fallback when Vector API
  is not available (JDK 21 without --add-modules). Scans 8 bytes at
  a time for quote/backslash/non-ASCII using zero-byte detection trick.

- Integrate name cache into base class readFieldName() to avoid
  ARM JIT regression (any override on UTF8 class destabilizes ARM
  JIT optimization of the bean parsing hot path).

Results (Quick profile, JDK 21, 16T):
- x86 ParseTreeString: +11.8%
- ARM bean parse: no regression (critical constraint)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* perf: JSONObject inner map — flat array storage replacing LinkedHashMap

JSONObject now uses JSONObjectMap (flat parallel arrays) as its default
backing storage instead of LinkedHashMap's node-based hash table.

Key design:
- JSONObjectMap: open-addressing with insertion-ordered parallel arrays
  (String[] keys, Object[] values). Linear scan for small maps (≤16),
  hash index for large maps. No per-entry Node allocation.
- JSONObject overrides all Map methods to delegate to inner map
- LinkedHashMap super class remains for API compatibility but is unused
- Parser calls fastPut() which uses putDirect() (skips duplicate check)
- Configurable via JSONObject.setMapCreator(Supplier) — users can
  switch to LinkedHashMap or custom Map implementation

Inspired by wast's JSONKeyValueMap (flat storage, power-of-2 capacity)
and fastjson2's ObjectCreator Supplier pattern.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* perf: LATIN1 parser + readFieldName override for ParseTreeString +123%

Add JSONParser.LATIN1 — dedicated parser for JDK compact strings (coder=0).
Zero-copy acc